welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:5: error: '(' expected but '{' found.
  else if {
          ^loneTeen:9: error: illegal start of simple expression
} 
^